Enhance MittelfrankenSuedParser and added more test szenarios